[gd_scene load_steps=9 format=3 uid="uid://dsq7rblse2ihb"]

[ext_resource type="Script" path="res://Source/Interface/MainHUD/MainHUD.gd" id="1_2q1lf"]

[sub_resource type="SystemFont" id="SystemFont_yrufc"]
font_names = PackedStringArray("Serif")
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pym5t"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0i7i"]
bg_color = Color(0.6, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SystemFont" id="SystemFont_0nmt7"]
font_names = PackedStringArray("Serif")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_duk2u"]
font_names = PackedStringArray("Serif")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_5j481"]
font_names = PackedStringArray("Serif")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_qy07e"]
font_names = PackedStringArray("Serif")
subpixel_positioning = 0

[node name="MainHud" type="CanvasLayer" groups=["MainHUD"]]
script = ExtResource("1_2q1lf")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BottomArea" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="BottomInfo" type="HBoxContainer" parent="MarginContainer/BottomArea"]
layout_mode = 2
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/BottomArea/BottomInfo"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="LabelHealth" type="Label" parent="MarginContainer/BottomArea/BottomInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("SystemFont_yrufc")
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/BottomArea/BottomInfo/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_pym5t")
theme_override_styles/fill = SubResource("StyleBoxFlat_n0i7i")
value = 68.45
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/BottomArea/BottomInfo"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="CountBullets" type="Label" parent="MarginContainer/BottomArea/BottomInfo/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_0nmt7")
theme_override_font_sizes/font_size = 25
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Division" type="ReferenceRect" parent="MarginContainer/BottomArea/BottomInfo/VBoxContainer2"]
layout_mode = 2
border_color = Color(1, 1, 1, 1)
border_width = 2.0
editor_only = false

[node name="LabelBullet" type="Label" parent="MarginContainer/BottomArea/BottomInfo/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_duk2u")
text = "Bullets"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TopArea" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="TopInfo" type="HBoxContainer" parent="MarginContainer/TopArea"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="LabelScore" type="Label" parent="MarginContainer/TopArea/TopInfo"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = SubResource("SystemFont_5j481")
theme_override_font_sizes/font_size = 35
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/TopArea/TopInfo"]
layout_mode = 2
border_color = Color(1, 1, 1, 1)
border_width = 2.0
editor_only = false

[node name="CountScore" type="Label" parent="MarginContainer/TopArea/TopInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = SubResource("SystemFont_qy07e")
theme_override_font_sizes/font_size = 35
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
